[package]
name = "ticketruster"
version = "0.1.0"
edition = "2021"
authors = ["Eric Thomas <eric@ericthomas.ca>"]
description = "A simple ticket sales system written in Rust."
readme = "README.md"
repository = "https://github.com/ericthomasca/ticketruster/"
license = "MIT"
license-file = "LICENSE"

[dependencies]
chrono = "0.4.23"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sqlx]
version = "0.6.2"
features = [
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
]